--- a/ocp/index.html
+++ b/ocp/index.html
@@ -34,18 +34,30 @@
           <br />
           <p>We chat on irc.freenode.net <a href="http://webchat.freenode.net/?channels=oggcastplanet">#oggcastplanet</a>.</p>
           <br /><br />
-          <h3>Oggcasts (17):</h3>
+          <h3>Oggcasts (25):</h3>
           <br />
           <ul>
           <li><a href="index.html#BSD">BSD</a> (1)</li>
+          <li><a href="index.html#Dead">Dead but not Forgotten</a> (7)</li>
           <li><a href="index.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (3)</li>
           <li><a href="index.html#Gaming">Gaming</a> (2)</li>
-          <li><a href="index.html#Linux">GNU/Linux</a> (11)</li>
+          <li><a href="index.html#Linux">GNU/Linux</a> (12)</li>
           </ul>
           <br /><br /><br /><br />
 
           <h3><a id="BSD">BSD</a> (1):</h3>
           <p>bsdtalk <a href="https://www.bsdtalk.org">https://www.bsdtalk.org</a></p>
+
+          <br /><br /><br /><br />
+
+          <h3><a id="Dead">Dead but not Forgotten</a> (7):</h3>
+          <p>/dev/random <a href="http://devrandomshow.org/">http://devrandomshow.org/</a></p>
+          <p>Information Underground <a href="http://gopher.info-underground.net:70/iu/">http://gopher.info-underground.net:70/iu/</a></p>
+          <p>Juiced Penguin <a href="https://archive.org/details/@juicedpenguin">https://archive.org/details/@juicedpenguin</a></p>
+          <p>KernelPanic Oggcast <a href="https://archive.org/details/KernelPanic_Oggcast_Ep00">https://archive.org</a></p>
+          <p>Linux Cranks <a href="https://archive.org/details/LinuxcranksPodcastOggArchive">https://archive.org/</a></p>
+          <p>Lotta Linux Links <a href="http://www.lottalinuxlinks.com/">http://www.lottalinuxlinks.com/</a></p>
+          <p>Palaver<a href="gopher://gopher.info-underground.net/1/lostnbronx/palaver">gopher://gopher.info-underground.net/1/lostnbronx/palaver</a></p>
 
           <br /><br /><br /><br />
 
@@ -62,7 +74,7 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Linux">GNU/Linux</a> (11):</h3>
+          <h3><a id="Linux">GNU/Linux</a> (12):</h3>
           <p>Distrohoppers' Digest <a href="https://distrohoppersdigest.blogspot.com/">https://distrohoppersdigest.blogspot.com/</a></p>
           <p>DistroWatch Weekly Podcast Feed: <a href="http://distrowatch.com/news/oggcast.xml">ogg</a></p>
           <p>Free as in Freedom <a href="http://faif.us/">http://faif.us/</a></p>
@@ -74,6 +86,7 @@
           <p>mintCast <a href="https://mintcast.org">https://mintcast.org</a></p>
           <p>Sunday Morning Linux Review <a href="https://smlr.us/">https://smlr.us/</a></p>
           <p>Sysadministrivia <a href="https://sysadministrivia.com/">https://sysadministrivia.com/</a></p>
+          <p>Tech and Loathing <a href="http://techandloathing.info/">http://techandloathing.info/</a></p>
 
 	  <br />
 
