--- a/podcasts.html
+++ b/podcasts.html
@@ -23,13 +23,13 @@
 
 	     </div>
 	      <div id="main">
-          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (65):</h3>
+          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (66):</h3>
           <br />
           <ul>
           <li><a href="podcasts.html#BSD">BSD</a> (2)</li>
           <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (13)</li>
           <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (9)</li>
-          <li><a href="podcasts.html#Linux">GNU/Linux</a> (18)</li>
+          <li><a href="podcasts.html#Linux">GNU/Linux</a> (19)</li>
           <li><a href="podcasts.html#Hardware">Hardware</a> (1)</li>
           <li><a href="podcasts.html#Networks">Networks and Portals</a> (9)</li>
           <li><a href="podcasts.html#Python">Python Programming</a> (3)</li>
@@ -72,7 +72,7 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Linux">GNU/Linux</a> (18):</h3>
+          <h3><a id="Linux">GNU/Linux</a> (19):</h3>
           <p>Ask Noah <a href="https://podcast.asknoahshow.com/">https://podcast.asknoahshow.com/</a></p>
           <p>Distrohoppers' Digest <a href="https://distrohoppersdigest.blogspot.com/">https://distrohoppersdigest.blogspot.com/</a></p>
           <p>DistroWatch Weekly Podcast Feeds: <a href="http://distrowatch.com/news/podcast.xml">mp3</a>, <a href="http://distrowatch.com/news/oggcast.xml">ogg</a></p>
@@ -90,6 +90,7 @@
           <p>mintCast <a href="https://mintcast.org">https://mintcast.org</a></p>
           <p>Sunday Morning Linux Review <a href="https://smlr.us/">https://smlr.us/</a></p>
           <p>Sysadministrivia <a href="https://sysadministrivia.com/">https://sysadministrivia.com/</a></p>
+          <p>TuxJam <a href="https://tuxjam.otherside.network/">https://tuxjam.otherside.network/</a></p>
           <p>Ubuntu Podcast <a href="https://ubuntupodcast.org/">https://ubuntupodcast.org/</a></p>
 
           <br /><br /><br /><br />
