--- a/podcasts.html
+++ b/podcasts.html
@@ -23,12 +23,12 @@
 
 	     </div>
 	      <div id="main">
-          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (66):</h3>
+          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (67):</h3>
           <br />
           <ul>
           <li><a href="podcasts.html#BSD">BSD</a> (2)</li>
           <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (13)</li>
-          <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (9)</li>
+          <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (10)</li>
           <li><a href="podcasts.html#Linux">GNU/Linux</a> (19)</li>
           <li><a href="podcasts.html#Hardware">Hardware</a> (1)</li>
           <li><a href="podcasts.html#Networks">Networks and Portals</a> (9)</li>
@@ -59,13 +59,14 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (9):</h3>
+          <h3><a id="FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (10):</h3>
           <p>Bad Voltage <a href="http://www.badvoltage.org/">http://www.badvoltage.org/</a></p>
           <p>CodeNewbie <a href="https://www.codenewbie.org/podcast">https://www.codenewbie.org/podcast</a></p>
           <p>Developer On Fire <a href="http://developeronfire.com/">http://developeronfire.com/</a></p>
           <p>FLOSS Weekly <a href="https://twit.tv/shows/floss-weekly">https://twit.tv/shows/floss-weekly</a></p>
           <p>Hacker Public Radio <a href="https://hackerpublicradio.org">https://hackerpublicradio.org</a></p>
           <p>Herding Code <a href="https://herdingcode.com">https://herdingcode.com</a></p>
+          <p>How to Fix the Internet <a href="https://www.eff.org/how-to-fix-the-internet-podcast">https://www.eff.org/how-to-fix-the-internet-podcast</a></p>
           <p>Knightwise.com <a href="https://knightwise.com/">https://knightwise.com/</a></p>
           <p>The Change Log <a href="https://changelog.com/">https://changelog.com/</a></p>
           <p>urandom podcast <a href="https://urandom-podcast.info/">https://urandom-podcast.info/</a></p>
