--- a/podcasts.html
+++ b/podcasts.html
@@ -23,15 +23,15 @@
 
 	     </div>
 	      <div id="main">
-          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (68):</h3>
+          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (71):</h3>
           <br />
           <ul>
           <li><a href="podcasts.html#BSD">BSD</a> (2)</li>
           <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (13)</li>
           <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (11)</li>
-          <li><a href="podcasts.html#Linux">GNU/Linux</a> (19)</li>
-          <li><a href="podcasts.html#Hardware">Hardware</a> (1)</li>
-          <li><a href="podcasts.html#Networks">Networks and Portals</a> (9)</li>
+          <li><a href="podcasts.html#Linux">GNU/Linux</a> (20)</li>
+          <li><a href="podcasts.html#Hardware">Hardware</a> (2)</li>
+          <li><a href="podcasts.html#Networks">Networks and Portals</a> (10)</li>
           <li><a href="podcasts.html#Python">Python Programming</a> (3)</li>
           <li><a href="podcasts.html#Video_Games">Video Games</a> (10)</li>
           </ul>
@@ -74,8 +74,9 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Linux">GNU/Linux</a> (19):</h3>
+          <h3><a id="Linux">GNU/Linux</a> (20):</h3>
           <p>Ask Noah <a href="https://podcast.asknoahshow.com/">https://podcast.asknoahshow.com/</a></p>
+          <p>Destination Linux <a href="https://destinationlinux.org/">https://destinationlinux.org/</a></p>
           <p>Distrohoppers' Digest <a href="https://distrohoppersdigest.blogspot.com/">https://distrohoppersdigest.blogspot.com/</a></p>
           <p>DistroWatch Weekly Podcast Feeds: <a href="http://distrowatch.com/news/podcast.xml">mp3</a>, <a href="http://distrowatch.com/news/oggcast.xml">ogg</a></p>
           <p>Free as in Freedom <a href="http://faif.us/">http://faif.us/</a></p>
@@ -97,13 +98,15 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Hardware">Hardware</a> (1):</h3>
+          <h3><a id="Hardware">Hardware</a> (2):</h3>
+          <p>Hardware Addicts <a href="https://hardwareaddicts.org/">https://hardwareaddicts.org/</a></p>
           <p>MiniPC <a href="http://podnutz.com/category/minipc/">http://podnutz.com/category/minipc/</a></p>
 
           <br /><br /><br /><br />
 
-          <h3><a id="Networks">Networks and Portals</a> (9):</h3>
+          <h3><a id="Networks">Networks and Portals</a> (10):</h3>
           <p>Black Sparrow Media <a href="https://blacksparrowmedia.net/">https://blacksparrowmedia.net/</a></p>
+          <p>Destination Linux Network <a href="https://destinationlinux.network/">https://destinationlinux.network/</a></p>
           <p>Hackermedia <a href="https://hackermedia.org/">https://hackermedia.org/</a></p>
           <p>Jupiter Broadcasting <a href="https://www.jupiterbroadcasting.com/">https://www.jupiterbroadcasting.com/</a></p>
           <p>Oggcast Planet <a href="https://monsterb.github.io/ocp/">https://monsterb.github.io/ocp/</a></p>
