--- a/ocp/index.html
+++ b/ocp/index.html
@@ -38,7 +38,7 @@
           <br />
           <ul>
           <li><a href="index.html#BSD">BSD</a> (1)</li>
-          <li><a href="index.html#Dead">Dead but not Forgotten</a> (7)</li>
+          <li><a href="index.html#Discontinued">Discontinued but not Forgotten</a> (7)</li>
           <li><a href="index.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (3)</li>
           <li><a href="index.html#Gaming">Gaming</a> (2)</li>
           <li><a href="index.html#Linux">GNU/Linux</a> (12)</li>
@@ -50,7 +50,7 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Dead">Dead but not Forgotten</a> (7):</h3>
+          <h3><a id="Discontinued">Discontinued but not Forgotten</a> (7):</h3>
           <p>/dev/random <a href="http://devrandomshow.org/">http://devrandomshow.org/</a></p>
           <p>Information Underground <a href="http://gopher.info-underground.net:70/iu/">http://gopher.info-underground.net:70/iu/</a></p>
           <p>Juiced Penguin <a href="https://archive.org/details/@juicedpenguin">https://archive.org/details/@juicedpenguin</a></p>
