--- a/podcasts.html
+++ b/podcasts.html
@@ -23,17 +23,17 @@
 
 	     </div>
 	      <div id="main">
-          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (71):</h3>
+          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (75):</h3>
           <br />
           <ul>
           <li><a href="podcasts.html#BSD">BSD</a> (2)</li>
-          <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (13)</li>
-          <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (11)</li>
-          <li><a href="podcasts.html#Linux">GNU/Linux</a> (20)</li>
+          <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (14)</li>
+          <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (12)</li>
+          <li><a href="podcasts.html#Linux">GNU/Linux</a> (21)</li>
           <li><a href="podcasts.html#Hardware">Hardware</a> (2)</li>
           <li><a href="podcasts.html#Networks">Networks and Portals</a> (10)</li>
           <li><a href="podcasts.html#Python">Python Programming</a> (3)</li>
-          <li><a href="podcasts.html#Video_Games">Video Games</a> (10)</li>
+          <li><a href="podcasts.html#Video_Games">Video Games</a> (11)</li>
           </ul>
           <br /><br /><br /><br />
 
@@ -43,7 +43,7 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (13):</h3>
+          <h3><a id="CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (14):</h3>
           <p>2600: Off the Hook <a href="https://www.2600.com/offthehook/">https://www.2600.com/offthehook/</a></p>
           <p>2600: Off the Wall <a href="https://www.2600.com/offthewall/">https://www.2600.com/offthewall/</a></p>
           <p>Brakeing Down Security <a href="https://www.brakeingsecurity.com/">https://www.brakeingsecurity.com/</a></p>
@@ -51,6 +51,7 @@
           <p>Cyber Frontiers <a href="https://theaverageguy.tv/category/tagpodcasts/cyberfrontiers/">https://theaverageguy.tv/cyberfrontiers/</a></p>
           <p>Daily Stormcasts <a href="https://isc.sans.edu/podcast.html">https://isc.sans.edu/podcast.html</a></p>
           <p>Defensive Security Podcast <a href="https://www.defensivesecurity.org/">https://www.defensivesecurity.org/</a></p>
+          <p>Open Source Security <a href="https://opensourcesecurity.io/">https://opensourcesecurity.io/</a></p>
           <p>PualDotCom Security Weekly <a href="https://securityweekly.com/category-shows/paul-security-weekly/">https://securityweekly.com/</a></p>
           <p>Risky Business <a href="https://risky.biz/">https://risky.biz/</a></p>
           <p>Shared Security <a href="https://sharedsecurity.net/">https://sharedsecurity.net/</a></p>
@@ -59,7 +60,7 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (11):</h3>
+          <h3><a id="FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (12):</h3>
           <p>Bad Voltage <a href="http://www.badvoltage.org/">http://www.badvoltage.org/</a></p>
           <p>CodeNewbie <a href="https://www.codenewbie.org/podcast">https://www.codenewbie.org/podcast</a></p>
           <p>Developer On Fire <a href="http://developeronfire.com/">http://developeronfire.com/</a></p>
@@ -69,12 +70,13 @@
           <p>How to Fix the Internet <a href="https://www.eff.org/how-to-fix-the-internet-podcast">https://www.eff.org/how-to-fix-the-internet-podcast</a></p>
           <p>Knightwise.com <a href="https://knightwise.com/">https://knightwise.com/</a></p>
           <p>The Change Log <a href="https://changelog.com/">https://changelog.com/</a></p>
+          <p>The Lunduke Show <a href="https://lunduke.com/">https://lunduke.com/</a></p>
           <p>urandom podcast <a href="https://urandom-podcast.info/">https://urandom-podcast.info/</a></p>
           <p>What the Dev? <a href="https://whatthedev.buzzsprout.com/">https://whatthedev.buzzsprout.com/</a></p>
 
           <br /><br /><br /><br />
 
-          <h3><a id="Linux">GNU/Linux</a> (20):</h3>
+          <h3><a id="Linux">GNU/Linux</a> (21):</h3>
           <p>Ask Noah <a href="https://podcast.asknoahshow.com/">https://podcast.asknoahshow.com/</a></p>
           <p>Destination Linux <a href="https://destinationlinux.org/">https://destinationlinux.org/</a></p>
           <p>Distrohoppers' Digest <a href="https://distrohoppersdigest.blogspot.com/">https://distrohoppersdigest.blogspot.com/</a></p>
@@ -95,6 +97,7 @@
           <p>Sysadministrivia <a href="https://sysadministrivia.com/">https://sysadministrivia.com/</a></p>
           <p>TuxJam <a href="https://tuxjam.otherside.network/">https://tuxjam.otherside.network/</a></p>
           <p>Ubuntu Podcast <a href="https://ubuntupodcast.org/">https://ubuntupodcast.org/</a></p>
+          <p>Ubuntu Security Podcast <a href="https://ubuntusecuritypodcast.org/">https://ubuntusecuritypodcast.org/</a></p>
 
           <br /><br /><br /><br />
 
@@ -125,7 +128,8 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Video_Games">Video Games</a> (10):</h3>
+          <h3><a id="Video_Games">Video Games</a> (11):</h3>
+          <p>Boiling Steam Podcast <a href="https://boilingsteam.com/category/podcast/">https://boilingsteam.com/category/podcast/</a></p>
           <p>cagcast <a href="https://www.cheapassgamer.com/">https://www.cheapassgamer.com/</a></p>
           <p>GAMERadio <a href="https://www.hwhq.com">https://www.hwhq.com</a></p>
           <p>Gamertag Radio <a href="http://www.gamertagradio.com/">http://www.gamertagradio.com/</a></p>
