--- a/online-courses.html
+++ b/online-courses.html
@@ -23,7 +23,7 @@
 
 	     </div>
 	      <div id="main">
-          <h3>Online Courses (59):</h3>
+          <h3>Online Courses (60):</h3>
           <br />
           <ul>
           <li><a href="online-courses.html#Cloud">Cloud Technologies</a> (2)</li>
@@ -33,7 +33,7 @@
           <li><a href="online-courses.html#DataSci">Data Science</a> (2)</li>
           <li><a href="online-courses.html#InfoSec">Information Security</a> (9)</li>
           <li><a href="online-courses.html#Linux">Linux</a> (1)</li>
-          <li><a href="online-courses.html#Misc">Misc. Online Courses</a> (29)</li>
+          <li><a href="online-courses.html#Misc">Misc. Online Courses</a> (30)</li>
           <li><a href="online-courses.html#WebDev">Web Development</a> (8)</li>
           </ul>
 
@@ -92,7 +92,7 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Misc">Misc. Online Courses</a> (29):</h3>
+          <h3><a id="Misc">Misc. Online Courses</a> (30):</h3>
           <p>Alison <a href="https://alison.com/">https://alison.com/</a></p>
           <p>Canvas Network <a href="https://www.canvas.net/">https://www.canvas.net/</a></p>
           <p>CGCircuit <a href="https://www.cgcircuit.com/">https://www.cgcircuit.com/</a></p>
@@ -106,6 +106,7 @@
           <p>FutureLearn <a href="https://www.futurelearn.com/">https://www.futurelearn.com/</a></p>
           <p>Grok Learning <a href="https://groklearning.com/">https://groklearning.com/</a></p>
           <p>Khan Academy <a href="https://www.khanacademy.org/">https://www.khanacademy.org/</a></p>
+          <p>Learning Lab by GitHUb <a href="https://lab.github.com/">https://lab.github.com/</a>
           <p>LinkedIn Learning <a href="https://www.linkedin.com/learning/">https://www.linkedin.com/learning/</a></p>
           <p>Microsoft Virtual Academy <a href="https://mva.microsoft.com/">https://mva.microsoft.com/</a></p>
           <p>Mozilla Learning Network <a href="https://teach.mozilla.org/">https://teach.mozilla.org/</a></p>
