--- a/bsd-flavors.html
+++ b/bsd-flavors.html
@@ -23,7 +23,7 @@
 
 	     </div>
 	      <div id="main">
-          <h3>BSD Flavors (13):</h3>
+          <h3>BSD Flavors (14):</h3>
           <br />
 <p><a href="https://bsdrp.net/">BSD Router Project</a> (BSDRP) is an embedded free and open source router distribution based on FreeBSD with Quagga and Bird.</p>
 
@@ -55,6 +55,10 @@
 
 <p><a href="https://www.netbsd.org/">NetBSD</a> is a free, fast, secure, and highly portable Unix-like Open Source operating system. It is available for a wide range of platforms, from large-scale servers and powerful desktop systems to handheld and embedded devices. Its
 clean design and advanced features make it excellent for use in both production and research environments, and the source code is freely available under a business-friendly license. NetBSD is developed and supported by a large and vivid international community.</p>
+
+<br /><br />
+
+<p><a href="https://nomadbsd.org/">NomadBSD</a> is a persistent live system for USB flash drives, based on FreeBSD. Together with automatic hardware detection and setup, it is configured to be used as a desktop system that works out of the box, but can also be used for data recovery, for educational purposes, or to test FreeBSD's hardware compatibility.</p>
 
 <br /><br />
 
