--- a/bsd.html
+++ b/bsd.html
@@ -23,11 +23,11 @@
 
 	     </div>
 	      <div id="main">
-          <h3>BSD Blogs, Forums, News, and Tutorials (3):</h3>
+          <h3>BSD Blogs, Forums, News, and Tutorials (5):</h3>
           <br />
           <ul>
             <li><a href="bsd.html#Blogs">Blogs, Info, News</a> (2)</li>
-            <li><a href="bsd.html#Forums">Forums</a> (0)</li>
+            <li><a href="bsd.html#Forums">Forums</a> (2)</li>
             <li><a href="bsd.html#Planets">Planets</a> (1)</li>
 
           </ul>
@@ -43,8 +43,9 @@
 
 <br /><br /><br /><br />
 
-<h3><a id="Forums">Forums</a> (0):</h3>
-
+<h3><a id="Forums">Forums</a> (2):</h3>
+<p>DaemonForums <a href="http://daemonforums.org/">http://daemonforums.org/</a></p>
+<p>The FreeBSD Forums <a href-"https://forums.freebsd.org/">https://forums.freebsd.org/</a></p>
 
 <br /><br /><br /><br />
 
