--- a/podcasts.html
+++ b/podcasts.html
@@ -23,13 +23,13 @@
 
 	     </div>
 	      <div id="main">
-          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (75):</h3>
+          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (77):</h3>
           <br />
           <ul>
           <li><a href="podcasts.html#BSD">BSD</a> (2)</li>
           <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (14)</li>
-          <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (12)</li>
-          <li><a href="podcasts.html#Linux">GNU/Linux</a> (21)</li>
+          <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (13)</li>
+          <li><a href="podcasts.html#Linux">GNU/Linux</a> (22)</li>
           <li><a href="podcasts.html#Hardware">Hardware</a> (2)</li>
           <li><a href="podcasts.html#Networks">Networks and Portals</a> (10)</li>
           <li><a href="podcasts.html#Python">Python Programming</a> (3)</li>
@@ -60,7 +60,7 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (12):</h3>
+          <h3><a id="FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (13):</h3>
           <p>Bad Voltage <a href="http://www.badvoltage.org/">http://www.badvoltage.org/</a></p>
           <p>CodeNewbie <a href="https://www.codenewbie.org/podcast">https://www.codenewbie.org/podcast</a></p>
           <p>Developer On Fire <a href="http://developeronfire.com/">http://developeronfire.com/</a></p>
@@ -69,6 +69,7 @@
           <p>Herding Code <a href="https://herdingcode.com">https://herdingcode.com</a></p>
           <p>How to Fix the Internet <a href="https://www.eff.org/how-to-fix-the-internet-podcast">https://www.eff.org/how-to-fix-the-internet-podcast</a></p>
           <p>Knightwise.com <a href="https://knightwise.com/">https://knightwise.com/</a></p>
+          <p>Reality 2.0 <a href="https://www.reality2cast.com/">https://www.reality2cast.com/</a></p>
           <p>The Change Log <a href="https://changelog.com/">https://changelog.com/</a></p>
           <p>The Lunduke Show <a href="https://lunduke.com/">https://lunduke.com/</a></p>
           <p>urandom podcast <a href="https://urandom-podcast.info/">https://urandom-podcast.info/</a></p>
@@ -76,7 +77,7 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Linux">GNU/Linux</a> (21):</h3>
+          <h3><a id="Linux">GNU/Linux</a> (22):</h3>
           <p>Ask Noah <a href="https://podcast.asknoahshow.com/">https://podcast.asknoahshow.com/</a></p>
           <p>Destination Linux <a href="https://destinationlinux.org/">https://destinationlinux.org/</a></p>
           <p>Distrohoppers' Digest <a href="https://distrohoppersdigest.blogspot.com/">https://distrohoppersdigest.blogspot.com/</a></p>
@@ -92,6 +93,7 @@
           <p>Linux in the Ham Shack <a href="https://lhspodcast.info/">https://lhspodcast.info/</a></p>
           <p>Linux Link Tech Show <a href="https://tllts.org/">https://tllts.org/</a></p>
           <p>LinuxLugCast <a href="https://linuxlugcast.com/">https://linuxlugcast.com/</a></p>
+          <p>Linux User Space <a href="https://linuxuserspace.show/">https://linuxuserspace.show/</a></p>
           <p>mintCast <a href="https://mintcast.org">https://mintcast.org</a></p>
           <p>Sunday Morning Linux Review <a href="https://smlr.us/">https://smlr.us/</a></p>
           <p>Sysadministrivia <a href="https://sysadministrivia.com/">https://sysadministrivia.com/</a></p>
