--- a/ocp/index.html
+++ b/ocp/index.html
@@ -34,11 +34,11 @@
           <br />
           <p>We chat on irc.freenode.net <a href="http://webchat.freenode.net/?channels=oggcastplanet">#oggcastplanet</a>.</p>
           <br /><br />
-          <h3>Oggcasts (27):</h3>
+          <h3>Oggcasts (28):</h3>
           <br />
           <ul>
           <li><a href="index.html#BSD">BSD</a> (1)</li>
-          <li><a href="index.html#Discontinued">Discontinued but not Forgotten</a> (9)</li>
+          <li><a href="index.html#Discontinued">Discontinued but not Forgotten</a> (10)</li>
           <li><a href="index.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (3)</li>
           <li><a href="index.html#Gaming">Gaming</a> (2)</li>
           <li><a href="index.html#Linux">GNU/Linux</a> (12)</li>
@@ -50,16 +50,20 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Discontinued">Discontinued but not Forgotten</a> (9):</h3>
+          <h3><a id="Discontinued">Discontinued but not Forgotten</a> (10):</h3>
           <p>deadbeatguitarist <del>http://deadbeatguitarist.com</del></p>
           <p>/dev/random <a href="http://devrandomshow.org/">http://devrandomshow.org/</a></p>
           <p>Information Underground <a href="http://gopher.info-underground.net:70/iu/">http://gopher.info-underground.net:70/iu/</a></p>
-          <p>Juiced Penguin <a href="https://archive.org/details/@juicedpenguin">https://archive.org/details/@juicedpenguin</a></p>
-          <p>KernelPanic Oggcast <a href="https://archive.org/details/KernelPanic_Oggcast_Ep00">https://archive.org</a></p>
-          <p>Linux Cranks <a href="https://archive.org/details/LinuxcranksPodcastOggArchive">https://archive.org/</a></p>
+          <p>Juiced Penguin <del>http://juicedpenguin.com</del> *</p>
+          <p>KernelPanic Oggcast <del>http://kernelpanicoggcast.net</del> *</p>
+          <p>Linux Cranks <del>http://linuxcranks.org</del> *</p>
           <p>Lotta Linux Links <a href="http://www.lottalinuxlinks.com/">http://www.lottalinuxlinks.com/</a></p>
           <p>MythTV Cast <del>http://mythtvcast.com/</del></p>
           <p>Palaver <a href="gopher://gopher.info-underground.net/1/lostnbronx/palaver">gopher://gopher.info-underground.net/1/lostnbronx/palaver</a></p>
+          <p>TiT Radio <del>http://titradio.info</del> **</p>
+          <br />
+          <p>* Archived on <a href="https://archive.org/">Internet Archive</a></p>
+          <p>** Archived on <a href="https://hackerpublicradio.org">Hacker Public Radio"</a></p>
 
           <br /><br /><br /><br />
 
