--- a/ocp/index.html
+++ b/ocp/index.html
@@ -63,7 +63,7 @@
           <p>TiT Radio <del>http://titradio.info</del> **</p>
           <br />
           <p>* Archived on <a href="https://archive.org/">Internet Archive</a></p>
-          <p>** Archived on <a href="https://hackerpublicradio.org">Hacker Public Radio"</a></p>
+          <p>** Archived on <a href="https://hackerpublicradio.org">Hacker Public Radio</a></p>
 
           <br /><br /><br /><br />
 
