--- a/ocp/index.html
+++ b/ocp/index.html
@@ -34,14 +34,14 @@
           <br />
           <p>We chat on irc.freenode.net <a href="http://webchat.freenode.net/?channels=oggcastplanet">#oggcastplanet</a>.</p>
           <br /><br />
-          <h3>Oggcasts (28):</h3>
+          <h3>Oggcasts (29):</h3>
           <br />
           <ul>
           <li><a href="index.html#BSD">BSD</a> (1)</li>
           <li><a href="index.html#Discontinued">Discontinued but not Forgotten</a> (10)</li>
           <li><a href="index.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (3)</li>
           <li><a href="index.html#Gaming">Gaming</a> (2)</li>
-          <li><a href="index.html#Linux">GNU/Linux</a> (12)</li>
+          <li><a href="index.html#Linux">GNU/Linux</a> (13)</li>
           </ul>
           <br /><br /><br /><br />
 
@@ -80,13 +80,14 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Linux">GNU/Linux</a> (12):</h3>
+          <h3><a id="Linux">GNU/Linux</a> (13):</h3>
           <p>Distrohoppers' Digest <a href="https://distrohoppersdigest.blogspot.com/">https://distrohoppersdigest.blogspot.com/</a></p>
           <p>DistroWatch Weekly Podcast Feed: <a href="http://distrowatch.com/news/oggcast.xml">ogg</a></p>
           <p>Free as in Freedom <a href="http://faif.us/">http://faif.us/</a></p>
           <p>GNU World Order <a href="https://gnuworldorder.info/">https://gnuworldorder.info/</a></p>
           <p>Going Linux <a href="https://goinglinux.com">https://goinglinux.com</a></p>
           <p>Linux in the Ham Shack <a href="https://lhspodcast.info/">https://lhspodcast.info/</a></p>
+          <p>Linux Lads <a href="https://linuxlads.com/">https://linuxlads.com/</a></p>
           <p>Linux Link Tech Show <a href="https://tllts.org/">https://tllts.org/</a></p>
           <p>LinuxLugCast <a href="https://linuxlugcast.com/">https://linuxlugcast.com/</a></p>
           <p>mintCast <a href="https://mintcast.org">https://mintcast.org</a></p>
