--- a/podcasts.html
+++ b/podcasts.html
@@ -23,13 +23,13 @@
 
 	     </div>
 	      <div id="main">
-          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (77):</h3>
+          <h3>Audiocasts, Netcasts, Oggcasts, Podcasts, Webcasts (78):</h3>
           <br />
           <ul>
           <li><a href="podcasts.html#BSD">BSD</a> (2)</li>
           <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (14)</li>
           <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (13)</li>
-          <li><a href="podcasts.html#Linux">GNU/Linux</a> (22)</li>
+          <li><a href="podcasts.html#Linux">GNU/Linux</a> (23)</li>
           <li><a href="podcasts.html#Hardware">Hardware</a> (2)</li>
           <li><a href="podcasts.html#Networks">Networks and Portals</a> (10)</li>
           <li><a href="podcasts.html#Python">Python Programming</a> (3)</li>
@@ -77,7 +77,7 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Linux">GNU/Linux</a> (22):</h3>
+          <h3><a id="Linux">GNU/Linux</a> (23):</h3>
           <p>Ask Noah <a href="https://podcast.asknoahshow.com/">https://podcast.asknoahshow.com/</a></p>
           <p>Destination Linux <a href="https://destinationlinux.org/">https://destinationlinux.org/</a></p>
           <p>Distrohoppers' Digest <a href="https://distrohoppersdigest.blogspot.com/">https://distrohoppersdigest.blogspot.com/</a></p>
@@ -89,6 +89,7 @@
           <p>Late Night Linux <a href="https://latenightlinux.com/">https://latenightlinux.com/</a></p>
           <p>LibreQuest <a href="https://librequest.org/">https://librequest.org/</a></p>
           <p>Linux Action News <a href="https://www.jupiterbroadcasting.com/show/linux-action-news/">https://www.jupiterbroadcasting.com/</a></p>
+          <p>Linux Lads <a href="https://linuxlads.com/">https://linuxlads.com/</a></p>
           <p>Linux For The Rest Of Us <a href="https://podnutz.com/category/linux-for-the-rest-of-us/">http://podnutz.com/</a></p>
           <p>Linux in the Ham Shack <a href="https://lhspodcast.info/">https://lhspodcast.info/</a></p>
           <p>Linux Link Tech Show <a href="https://tllts.org/">https://tllts.org/</a></p>
